<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mon Amour</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="over">Close</string>
    
    <string name="appel_vdapps">VDapps.com</string>
    <string name="appel_settings">Settings</string>
    
    <string name="welcome_content">Take a few moments to configure the application.</string>
    <string name="welcome_made_in_france">Made in France</string>
    
    <string name="number_title">Number of mon amour</string>
    <string name="number_choose">Choose a number</string>
    
    <string name="time_title">Waiting time</string>
    <plurals name="time_content">
        <item quantity="one">The call will launch after 1 second.</item>
        <item quantity="other">The call will launch after %d seconds.</item>
    </plurals>
    
    <string name="shortcut_title">Shortcut</string>
    <string name="shortcut_content">Add a shortcut to your home screen.</string>
    <string name="shartcut_add"><b>+</b></string>
    
    <string name="support_title">Some support?</string>
    <string name="support_content">Offer a small reward for the work that <b>Mon Amour</b> requested.</string>
    <string name="support_rate">Rate Mon Amour</string>
    <string name="support_donate">Make a donation</string>
    <string name="support_thanks_in_advance">Thank you in advance ! :)</string>
    <string name="support_thanks">Thank you 1000 times ! &lt;3</string>
</resources>