<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:weightSum="100" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="25dp"
            android:layout_weight="40"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_large" />

        <LinearLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:orientation="vertical" >

            <include layout="@layout/fragment_call" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/dark_red"
        android:padding="5dp" >

        <Button
            android:id="@+id/bPrevious"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:onClick="onClickPrevious"
            android:text="@string/previous"
            android:visibility="invisible" />

        <Button
            android:id="@+id/bNext"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="onClickNext"
            android:text="@string/appel_settings" />
    </RelativeLayout>

</RelativeLayout>